--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ branches:
 
 env:
   global:
-  - ANSIBLE_ROLE_NAME=opendevshop.aegir-apache
+  - ANSIBLE_ROLE_NAME=opendevshop.apache
   - DEVSHOP_VERSION=1.x
   - SITE_HOSTS='dev.drup.devshop.travis dev.projectname.devshop.travis live.projectname.devshop.travis testenv.drpl8.devshop.travis dev.rootproject.devshop.local.computer'
 
