--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,25 +1,36 @@
+---
 galaxy_info:
-  author: Jon Pugh
-  description: Makes an apache server accessible as an aegir remote.
+  author: jonpugh
+  description: Apache Web Server for DevShop hosting system.
   company: ThinkDrop Inc
   
   license: GPLv2
-  
-  min_ansible_version: 1.2
+
+  min_ansible_version: 2.4
 
   galaxy_tags:
+    - web
+    - apache
+    - webserver
+    - html
+    - httpd
     - aegir
     - opendevshop
+    - devshop
     - hosting
+    - drupal
   
   platforms:
     - name: EL
       versions:
       - 7
+      - 6
     - name: Ubuntu
       versions:
       - trusty
-      
+      - xenial
+      - bionic
+
 dependencies:
-  - opendevshop.aegir-user
+  - opendevshop.user
   - geerlingguy.apache
