--- a/tasks/Debian-post.yml
+++ b/tasks/Debian-post.yml
@@ -6,4 +6,4 @@
     # For Debian, apache_conf_path == '/etc/apache2'
     dest: "{{ apache_conf_path }}/conf-enabled/{{ aegir_user_name }}.conf"
     state: link
-    force: yes
+    force: true
