Work around playbook ordering interdependencies by just reinstalling the "php_packages_extra" list.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -40,6 +40,13 @@
   become_method: "{{ ansible_become_method_aegir }}"
   command: "sudo {{ apache_control }} -S"
 
+# This is copied from geerlingguy.php. It is run again here to ensure the
+# php_packages_extra variables from our roles are loaded.
+- name: DevShop | Define extra php_packages.
+  set_fact:
+    php_packages: "{{ php_packages | list + php_packages_extra | list }}"
+  when: php_packages_extra is defined
+
 - name: Post Install on RedHat
   include: "RedHat-post.yml"
   when: ansible_os_family == "RedHat"
