--- a/tasks/Debian-post.yml
+++ b/tasks/Debian-post.yml
@@ -8,6 +8,9 @@
     state: link
     force: true
 
+- name: Set version of PHP CLI to {{ php_version }} [variable 'php_version']
+  command: "update-alternatives --set php /usr/bin/php{{ php_version }}"
+
 - name: Disable Apache mods.
   file:
     path: "{{ php_versions_available | reject('search', 'php' ~ php_version) | list }}"
