--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -7,11 +7,13 @@ php_versions_available:
   - "7.1"
   - "7.2"
   - "7.3"
+  - "7.4"
 
 php_packages_extra:
   - libapache2-mod-php7.1
   - libapache2-mod-php7.2
   - libapache2-mod-php7.3
+  - libapache2-mod-php7.4
 
 # opendevshop.apache/tasks/main.yml disables all the mods, then enables these.
 apache_mods_enabled:
@@ -25,3 +27,5 @@ apache_mods_disabled:
   - "php7.2.load"
   - "php7.3.conf"
   - "php7.3.load"
+  - "php7.4.conf"
+  - "php7.4.load"
