--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -21,13 +21,8 @@ apache_mods_enabled:
   - "php{{ php_version }}.load"
 
 apache_mods_disabled:
-  - "php7.0.conf"
-  - "php7.0.load"
-  - "php7.1.conf"
-  - "php7.1.load"
-  - "php7.2.conf"
-  - "php7.2.load"
-  - "php7.3.conf"
-  - "php7.3.load"
-  - "php7.4.conf"
-  - "php7.4.load"
+  - "php7.0"
+  - "php7.1"
+  - "php7.2"
+  - "php7.3"
+  - "php7.4"
