--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -8,12 +8,14 @@ php_versions_available:
   - "7.2"
   - "7.3"
   - "7.4"
+  - "8.0"
 
 php_packages_extra:
   - libapache2-mod-php7.1
   - libapache2-mod-php7.2
   - libapache2-mod-php7.3
   - libapache2-mod-php7.4
+  - libapache2-mod-php8.0
 
 # opendevshop.apache/tasks/main.yml disables all the mods, then enables these.
 apache_mods_enabled:
@@ -26,3 +28,4 @@ apache_mods_disabled:
   - "php7.2"
   - "php7.3"
   - "php7.4"
+  - "php8.0"
