--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -9,6 +9,7 @@ php_versions_available:
   - "7.3"
   - "7.4"
   - "8.0"
+  - "8.1"
 
 php_packages_extra:
   - libapache2-mod-php7.1
@@ -16,6 +17,7 @@ php_packages_extra:
   - libapache2-mod-php7.3
   - libapache2-mod-php7.4
   - libapache2-mod-php8.0
+  - libapache2-mod-php8.1
 
 # opendevshop.apache/tasks/main.yml disables all the mods, then enables these.
 apache_mods_enabled:
@@ -29,3 +31,4 @@ apache_mods_disabled:
   - "php7.3"
   - "php7.4"
   - "php8.0"
+  - "php8.1"
