--- a/tasks/RedHat-post.yml
+++ b/tasks/RedHat-post.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: Symbolic link to Aegir's Apache Config
+- name: Symbolic link to Platform's Apache Config
   file:
     src: "{{ aegir_user_home }}/config/apache.conf"
     # For RedHat, apache_conf_path == '/etc/httpd/conf.d'
