--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,3 +4,6 @@ aegir_user_home: /var/aegir
 aegir_user_in_web_group: true
 
 ansible_become_method_aegir: sudo
+
+devshop_pip_packages:
+  - mysqlclient
