One last service tag?

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -7,3 +7,4 @@
     install_recommends: "{{ php_install_recommends }}"
   register: php_package_install
   notify: restart webserver
+  tags: service
