Revert "Skip DevShop | Ensure PHP packages are installed."
This reverts commit 6a9e2ff6c02810830bc0a5603473c778dc9061bd.

--- a/tasks/Debian.yml
+++ b/tasks/Debian.yml
@@ -1,11 +1,10 @@
 ---
 
-# See if we need this. Proper variables and geerlingguy.php should be all we need.
-#- name: DevShop | Ensure PHP packages are installed.
-#  apt:
-#    name: "{{ php_packages }}"
-#    state: "{{ php_packages_state }}"
-#    install_recommends: "{{ php_install_recommends }}"
-#  register: php_package_install
-#  notify: restart webserver
-#  tags: service
+- name: DevShop | Ensure PHP packages are installed.
+  apt:
+    name: "{{ php_packages }}"
+    state: "{{ php_packages_state }}"
+    install_recommends: "{{ php_install_recommends }}"
+  register: php_package_install
+  notify: restart webserver
+  tags: service
