--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -20,6 +20,7 @@ php_packages_extra:
   - libapache2-mod-php8.1
   - "php{{ php_version }}-bcmath"
   - "php{{ php_version }}-intl"
+  - "php{{ php_version }}-zip"
 
 # opendevshop.apache/tasks/main.yml disables all the mods, then enables these.
 apache_mods_enabled:
